Changes again to the angular.json

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "QR": {
+    "LuxyNics_QR": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/LuxyNics_QR/index.html",
+            "outputPath": "dist/LuxyNics_QR/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "QR:build"
+            "browserTarget": "LuxyNics_QR:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "QR:build:production"
+              "browserTarget": "LuxyNics_QR:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "QR:build"
+            "browserTarget": "LuxyNics_QR:build"
           }
         },
         "test": {
@@ -115,11 +115,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "QR:serve"
+            "devServerTarget": "LuxyNics_QR:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "QR:serve:production"
+              "devServerTarget": "LuxyNics_QR:serve:production"
             }
           }
         },
@@ -130,5 +130,5 @@
       }
     }
   },
-  "defaultProject": "QR"
+  "defaultProject": "LuxyNics_QR"
 }
